--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,500&family=Outfit:wght@100..900&family=Prata&display=swap");
+
 @import "tailwindcss";
 @import "tw-animate-css";
+
+* {
+  font-family: "Outfit", sans-serif;
+}
 
 @custom-variant dark (&:is(.dark *));
 
