--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,7 @@
 
 @import "tailwindcss";
 @import "tw-animate-css";
+@import "keen-slider/keen-slider.min.css";
 
 * {
   font-family: "Outfit", sans-serif;
